<resources>
    <string name="app_name">Tasker</string>
    <string name="status">Status:</string>
    <string name="id">Id:</string>
    <string name="name">Name:</string>
    <string name="startWorking">START WORKING</string>
    <string name="startTravelling">START TRAVELLING</string>
    <string name="stop">STOP</string>
</resources>
