...
            android:layout_toEndOf="@+id/nameText"
            android:textSize="15sp"
            android:layout_marginStart="4dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="180dp"
            android:id="@+id/button"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button"
            android:textColor="@color/windowBackground"
            android:textStyle="bold"
...
